tests/semantic_errors/sasha32_3.tl
-- test case 32.
-- Description : Expression semantics.

-- Expected : '3'
require "ifj21" 
 function foo( r : string, a : string ) : nil
	func()
 end 

